--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">JNI</string>
+    <string name="back">返回上级</string>
     <string name="title_activity_settings">Settings</string>
 
     <!-- Preference Titles -->
